syntax = "proto3";

package counter;

option go_package = "/api/grpc/proto";

service CounterService {
  rpc GetCounters(CounterRequest) returns (CounterResponse);
}

message CounterRequest {
  string scan_id = 1;
}

message CounterResponse {
  string scan_id = 1;
  int64 directories_count = 2;
  int64 files_count = 3;
  int64 completed_directories = 4;
  int64 completed_files = 5;
}